--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:2.2.0"
     annotationProcessor "android.arch.lifecycle:compiler:2.2.0"
 
+    implementation "com.airbnb.android:lottie:3.4.0"
+
 }
