--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,10 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    implementation "com.github.jgabrielfreitas:BlurImageView:1.0.1"
+
+    implementation 'com.borjabravo:readmoretextview:2.1.0'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
